--- a/index6.html
+++ b/index6.html
@@ -11,7 +11,7 @@
         <div class="div1">
             <h1>NabukoOO: TIME TO CLIMB!</h1>
             <img src="./assets/images/One-Does-Not-Simply.jpg" alt="meme LOTR - one does not simply..."><ul></ul>
-            <a href=""><button>TRY TO CLIMB</button></a>
+            <a href="index.html"><button>TRY TO CLIMB</button></a>
         </div>
         <div class="parent">
             <img src="./assets/images/1.PNG" style="display: flex">
